<resources>
    <string name="app_name">Shyam_Udacity</string>
    <string name="nano_degree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE MY OWN APP</string>
    <string name="title_activity_popular_movies_home">Pop Movies</string>
    <string name="popular_movie_API_key">Please Find the API key in Read Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_movie_details_screen">MovieDetail</string>
    <string name="title_activity_popular_movie_details_screen">PopularMovieDetailsScreen</string>
    <string name="most_popular">Most Popular</string>
    <string name="high_rated">Highest-Rated</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="mark_favorite">Mark as \n Favorite</string>
    <string name="favorite">Favorite</string>

</resources>
