<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/nano_degree_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:textSize="22dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/spotify_streamer"
        android:textSize="18dp"
        android:text="@string/spotify_streamer"
        android:background="@drawable/custom_button" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="18dp"
        android:id="@+id/scores_app"
        android:text="@string/scores_app"
        android:background="@drawable/custom_button"
        style="@style/margin"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="18dp"
        android:id="@+id/library_app"
        android:text="@string/library_app"
        android:background="@drawable/custom_button"
        style="@style/margin"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="18dp"
        android:id="@+id/build_itbig"
        android:text="@string/build_it_bigger"
        android:background="@drawable/custom_button"
        style="@style/margin"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="16dp"
        android:id="@+id/capstone_myApp"
        android:text="@string/capstone_my_own_app"
        android:background="@drawable/custom_button_capstone"
        style="@style/margin"/>

</LinearLayout>
